--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -2,7 +2,7 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
-@import "components";
+@import 'components';
 @import 'partials/logo';
 @import 'partials/top-banner';
 @import 'partials/customers';
