--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
@@ -7,4 +7,5 @@
   </p>
   {{ .Scratch.Set "cssClass" "link_light link_xl"}} {{ partial "link" . }}
   <div class="integrations__preview"></div>
+  <div class="integrations__overlay"></div>
 </section>
