update vectors image blur effect

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_vectors.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_vectors.scss
@@ -132,3 +132,13 @@
     }
   }
 }
+
+.vectors__card:first-child {
+  .vectors__card-image {
+    height: rem(256);
+
+    @include media-breakpoint-up(xl) {
+      height: rem(392);
+    }
+  }
+}
