Fix top header and add some visual effects (#749)
* fix top banner on mobile and add star background pattern

* add more visual effects

* update vectors image blur effect

---------

Co-authored-by: Nik Shemel <nikita_shershnev@hotmail.com>

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -2,7 +2,7 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
-@import "components";
+@import 'components';
 @import 'partials/logo';
 @import 'partials/top-banner';
 @import 'partials/customers';
@@ -22,4 +22,8 @@
 
 .main-header {
   background: $neutral-10;
+
+  @include media-breakpoint-up(xl) {
+    background: url('/img/stars-pattern.png') $neutral-10;
+  }
 }
