--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -10,9 +10,9 @@
   </div>
   <div class="docker-deploy__preview" style="background-image: url(/img/docker-illustration.png)">
     <code>
-    {{ range $index, $command := .Params.commands }}
-      <span class="no-copy">{{ add $index 1 }}&nbsp;</span>{{ $command | safeHTML }}<br>
-    {{ end }}
+      {{ range $index, $command := .Params.commands }}
+      <span class="no-copy">{{ add $index 1 }}&nbsp;</span>{{ $command | safeHTML }}<br />
+      {{ end }}
     </code>
   </div>
 </section>
