--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<footer class="footer">
   <div class="footer__top">
     <div class="footer__top-content">
       <div class="footer__social">
@@ -67,4 +67,4 @@
       </div>
     </div>
   </div>
-</section>
+</footer>
