--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -12,16 +12,18 @@
     </div>
     <div class="core-features__cloud-native-image"></div>
   </div>
-  <div class="core-features__cards">
-    {{ range .Params.featureCards }}
-    <div class="card core-features__card">
-      <div>
-        {{ .icon | safeHTML }}
-        <h6 class="core-features__card-title">{{ .title }}</h6>
-        <p class="core-features__card-content">{{ .content }}</p>
+  <div class="container">
+    <div class="core-features__cards row">
+      {{ range .Params.featureCards }}
+      <div class="card core-features__card col-4 col-lg-12">
+        <div>
+          {{ .icon | safeHTML }}
+          <h6 class="core-features__card-title">{{ .title }}</h6>
+          <p class="core-features__card-content">{{ .content }}</p>
+        </div>
+        <a class="link link_dark link_md align-self-start" href="{{ .link.url }}"> {{ .link.text }} </a>
       </div>
-      <a class="link link_dark link_md align-self-start" href="{{ .link.url }}"> {{ .link.text }} </a>
+      {{ end }}
     </div>
-    {{ end }}
   </div>
 </section>
