--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -12,4 +12,5 @@
       <span class="hero__stars-count"> {{ .Params.starLogo | safeHTML }} 15.2K </span>
     </button>
   </div>
+  <div class="hero__image"></div>
 </section>
