--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_core-features.scss
@@ -5,8 +5,6 @@
 
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
-  padding-left: $spacer * 1.5;
-  padding-right: $spacer * 1.5;
 
   display: flex;
   flex-direction: column;
@@ -32,9 +30,10 @@
   &__cards {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: rem(30);
+    row-gap: rem(30);
+    min-width: 100%;
     margin-top: rem(30);
   }
 
@@ -51,7 +50,7 @@
     padding-bottom: $spacer * 2.5;
     padding-left: $spacer * 1.5;
     padding-right: $spacer * 1.5;
-    width: 100%;
+    min-width: 100%;
     max-width: 100%;
     min-height: rem(475);
     border-radius: calc($spacer / 2);
