--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
@@ -4,8 +4,6 @@
   background-color: $neutral-94;
 
   padding-top: $spacer * 4;
-  padding-left: $spacer * 1.5;
-  padding-right: $spacer * 1.5;
   padding-bottom: $spacer * 4;
 
   display: flex;
@@ -16,7 +14,7 @@
     display: flex;
     flex-direction: column;
     max-width: rem(1110);
-    width: 100%;
+    min-width: 100%;
     margin-bottom: $spacer * 2.5;
   }
 
@@ -142,7 +140,6 @@
     &__cards-wrapper {
       padding-bottom: $spacer * 1.5;
       overflow-y: scroll;
-      max-width: rem(1110);
     }
 
     &__cards {
