--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
@@ -9,14 +9,15 @@
 
   &__content {
     text-align: center;
-    padding: 0 rem(20) rem(344);
-    max-width: 100%;
+    padding-bottom: rem(344);
     margin: 0 auto;
+    width: 100%;
   }
 
   &__title {
     color: $neutral-98;
     text-align: center;
+    width: 100%;
     margin-bottom: $spacer;
     font-size: map-get($font-sizes, 4);
     line-height: rem(48);
