--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -1,10 +1,18 @@
 <section class="hero">
-  <div class="hero__content">
-    <h1 class="hero__title">{{ .Params.title }}</h1>
-    <p class="hero__subtitle">{{ .Params.subtitle }}</p>
-    <div class="hero__buttons">
-      <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
-      <a href="{{ .Params.learnMore.url }}" class="button button_outlined button_lg">{{ .Params.learnMore.text }}</a>
+  <div class="container">
+    <div class="row-4 row-xl-12">
+      <div class="hero__content col-4 col-xl-12">
+        <h1 class="hero__title">{{ .Params.title }}</h1>
+        <p class="hero__subtitle">{{ .Params.subtitle }}</p>
+        <div class="hero__buttons">
+          <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg"
+            >{{ .Params.startFree.text }}</a
+          >
+          <a href="{{ .Params.learnMore.url }}" class="button button_outlined button_lg"
+            >{{ .Params.learnMore.text }}</a
+          >
+        </div>
+      </div>
     </div>
     <button type="button" class="hero__stars">
       {{ .Params.githubLogo | safeHTML }}
