--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/vectors.html
@@ -2,9 +2,27 @@
   <div class="container">
     <h2 class="vectors__title mx-auto">{{ .Params.title }}</h2>
     <p class="vectors__subtitle mx-auto">{{ .Params.subtitle }}</p>
-    <div class="vectors__cards">
+    <div class="vectors__cards row-4 row-xl-12">
       {{ range $index, $element := .Params.featureCards }}
-      <div {{ if mod $index 2 | eq 0 }} class="vectors__card" {{ else }} class="vectors__card--reversed" {{ end }}>
+      <div
+        {{
+        if
+        mod
+        $index
+        2
+        |
+        eq
+        0
+        }}
+        class="vectors__card col-4 col-xl-12"
+        {{
+        else
+        }}
+        class="vectors__card--reversed col-4 col-xl-12"
+        {{
+        end
+        }}
+      >
         {{ .icon | safeHTML }}
         <div class="vectors__card-description">
           <h4 class="vectors__card-title">{{ .title }}</h4>
