--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
@@ -73,7 +73,7 @@
 
     &__description {
       flex-direction: row;
-      align-items: flex-start;
+      justify-content: center;
       padding: 0;
       gap: calc($spacer / 2);
     }
