add feature overview cards

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -19,6 +19,7 @@
 @import 'partials/footer';
 @import 'partials/additional-resources';
 @import 'partials/menu-mobile';
+@import 'partials/feature-overview';
 
 .main-header {
   background: $neutral-10;
