--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -14,19 +14,21 @@
         </div>
       </div>
     </div>
-    <div class="customer-stories__cards-wrapper row-4 row-xl-12">
-      <div class="customer-stories__cards">
+    <div class="customer-stories__cards-wrapper">
+      <div class="customer-stories__cards row flex-nowrap">
         {{ range .Params.storyCards }}
-        <div class="card customer-stories__card col-4 col-xl-12">
-          <div>
-            <img src="{{.icon}}" alt="{{.brand}}" />
-            <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
-          </div>
-          <div class="customer-stories__card-footer">
-            <img src="{{.author.avatar}}" alt="{{.author.fullName}}" />
-            <div class="customer-stories__card-author">
-              <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
-              <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+        <div class="col-12 col-xl-4">
+          <div class="card customer-stories__card">
+            <div>
+              <img src="{{.icon}}" alt="{{.brand}}" />
+              <p class="customer-stories__card-content">{{ .content | safeHTML }}</p>
+            </div>
+            <div class="customer-stories__card-footer">
+              <img src="{{.author.avatar}}" alt="{{.author.fullName}}" />
+              <div class="customer-stories__card-author">
+                <p class="customer-stories__card-author-name">{{ .author.fullName }}</p>
+                <p class="customer-stories__card-author-position">{{ .author.position }}</p>
+              </div>
             </div>
           </div>
         </div>
