--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -13,16 +13,21 @@
     </button>
   </div>
   <div class="hero__image">
-      <picture>
-        <source media="(min-width: 2881px)" srcset="/img/hero-home-illustration-x3.webp" type="image/webp">
-        <source media="(min-width: 2881px)" srcset="/img/hero-home-illustration-x3.png" type="image/png">
-        <source media="(min-width: 1441px)" srcset="/img/hero-home-illustration-x2.webp" type="image/webp">
-        <source media="(min-width: 1441px)" srcset="/img/hero-home-illustration-x2.png" type="image/png">
-        <source media="(min-width: 721px)" srcset="/img/hero-home-illustration-x1.webp" type="image/webp">
-        <source media="(min-width: 721px)" srcset="/img/hero-home-illustration-x1.png" type="image/png">
-        <source srcset="/img/hero-home-illustration-x05.webp" type="image/webp">
-        <source srcset="/img/hero-home-illustration-x05.png" type="image/png">
-        <img src="/img/hero-home-illustration-x05.png" alt="Hero image: an astronaut" draggable="false">
-      </picture>
-    </div>
+    <picture>
+      {{ range .Params.heroImageSources }}
+      <source
+        {{
+        if
+        .minWidth
+        }}media="(min-width: {{ .minWidth }})"
+        {{
+        end
+        }}
+        srcset="{{ .srcset }}"
+        type="{{ .type }}"
+      />
+      {{ end }}
+      <img src="{{ .Params.fallbackHeroImage.src }}" alt="{{ .Params.fallbackHeroImage.alt }}" draggable="false" />
+    </picture>
+  </div>
 </section>
