add qdrant vector database page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -20,6 +20,8 @@
 @import 'partials/additional-resources';
 @import 'partials/menu-mobile';
 @import 'partials/feature-overview';
+@import 'partials/qdrant-vector-database-hero';
+@import 'partials/qdrant-vector-database-use-cases';
 
 .main-header {
   background: $neutral-10;
