--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
@@ -3,49 +3,42 @@
 .additional-resources {
   background-color: $neutral-10;
 
-  padding-top: $spacer * 7.5;
-  padding-left: $spacer * 1.5;
-  padding-right: $spacer * 1.5;
-  padding-bottom: $spacer * 7.5;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding-top: $spacer * 4;
+  padding-bottom: $spacer * 4;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
 
   &__title {
-    font-size: map-get($font-sizes, 3);
-    margin-bottom: $spacer * 4;
-    line-height: rem(57);
-    max-width: rem(1110);
+    margin-bottom: $spacer * 3;
+    font-size: $spacer * 2;
+    line-height: rem(38);
     color: $neutral-98;
     width: 100%;
   }
 
   &__cards {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+    justify-content: space-between;
     gap: rem(30);
   }
 
   &__card {
-    background-color: $neutral-20;
-    padding-top: $spacer * 1.5;
-    padding-bottom: $spacer * 1.5;
-    padding-left: $spacer * 1.5;
-    padding-right: $spacer * 1.5;
-    max-width: rem(255);
-    min-height: rem(333);
-    border-radius: calc($spacer / 2);
+    &-info {
+      background: linear-gradient($neutral-20, #0E1424);
+      padding-top: $spacer * 1.5;
+      padding-bottom: $spacer * 1.5;
+      padding-left: $spacer * 1.5;
+      padding-right: $spacer * 1.5;
+      border-radius: calc($spacer / 2);
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
 
-    svg {
-      max-width: rem(24);
-      max-height: rem(24);
+      svg {
+        max-width: rem(24);
+        max-height: rem(24);
+      }
     }
   }
 
@@ -69,5 +62,36 @@
     font-weight: 500;
     font-size: map-get($font-sizes-text, 'm');
     text-decoration: none;
+  }
+
+  @include media-breakpoint-up(xl) {
+    padding-top: $spacer * 7.5;
+    padding-bottom: $spacer * 7.5;
+
+    &__wrapper {
+      max-width: rem(1134);
+    }
+
+    &__title {
+      font-size: map-get($font-sizes, 3);
+      line-height: rem(57);
+      margin-bottom: $spacer * 4;
+    }
+
+    &__cards {
+      justify-content: space-between;
+      gap: 0;
+      padding: 0 rem(12);
+    }
+
+    &__card {
+      max-width: rem(255);
+      padding: 0;
+
+      &-info {
+        width: 100%;
+        min-height: rem(333);
+      }
+    }
   }
 }
