polish main page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
@@ -148,3 +148,11 @@ $display-font-sizes: (
 );
 
 $display-font-weight: 700;
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1134px,
+  xxl: 1134px,
+);
