--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
@@ -5,6 +5,8 @@
 
   padding-top: $spacer * 5;
   padding-bottom: $spacer * 5;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
 
   display: flex;
   align-items: center;
