--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="core-features__title mx-auto">{{ .Params.title }}</h2>
     <p class="core-features__subtitle mx-auto">{{ .Params.description }}</p>
-    <div class="text-center">
+    <div class="text-start text-lg-center">
       <a class="link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
     </div>
     <div class="row">
