--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customers.scss
@@ -21,7 +21,8 @@
     width: 100%;
     flex-direction: column;
     align-items: center;
-    padding: 0 rem(12);
+    padding-left: rem(20);
+    padding-right: rem(20);
   }
 
   &__link {
