--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -3,6 +3,8 @@
 .footer {
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 2.5;
+  padding-left: $spacer * 0.5;
+  padding-right: $spacer * 0.5;
   background-color: $neutral-10;
 
   display: flex;
@@ -130,7 +132,7 @@
     background-color: transparent;
     padding-top: calc($spacer / 2);
     padding-bottom: calc($spacer / 2);
-    border: 1px solid $neutral-70;
+    border: 1px solid $neutral-40;
     padding-left: $spacer;
     padding-right: $spacer;
     border-radius: 8px;
@@ -141,7 +143,7 @@
   }
 
   &__middle-subscribe input::placeholder {
-    color: $neutral-98;
+    color: $neutral-70;
   }
 
   &__middle-subscribe a {
