--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -19,4 +19,6 @@
       {{ end }}
     </div>
   </div>
+  <div class="additional-resources__overlay-top"></div>
+  <div class="additional-resources__overlay-bottom"></div>
 </section>
