--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
@@ -10,13 +10,13 @@
         </div>
         <img
           class="qdrant-vector-database-hero__preview"
-          src="{{ .Params.icon.src }}"
-          alt="{{ .Params.icon.alt }}"
+          src="{{ .Params.image.src }}"
+          alt="{{ .Params.image.alt }}"
         />
         <img
           class="qdrant-vector-database-hero__preview-mobile"
-          src="{{ .Params.icon.srcMobile }}"
-          alt="{{ .Params.icon.alt }}"
+          src="{{ .Params.image.srcMobile }}"
+          alt="{{ .Params.image.alt }}"
         />
       </div>
     </div>
