--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
@@ -11,7 +11,7 @@
               <a class="link link_light link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
             </div>
             <div class="qdrant-vector-database-use-cases__preview col-12 col-xl-6">
-              <img src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
+              <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
             </div>
           </div>
         </div>
@@ -19,7 +19,7 @@
         <div class="col-12">
           <div class="row justify-content-xl-between align-items-lg-center">
             <div class="qdrant-vector-database-use-cases__preview col-12 col-xl-6">
-              <img src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
+              <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
             </div>
             <div class="qdrant-vector-database-use-cases__text col-12 col-xl-5">
               <h3 class="qdrant-vector-database-use-cases__title">{{ .title }}</h3>
