--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
@@ -1,12 +1,19 @@
 @use '../helpers/functions' as *;
 
 .additional-resources {
+  position: relative;
+  overflow: hidden;
   background-color: $neutral-10;
 
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
   padding-left: $spacer * 0.5;
   padding-right: $spacer * 0.5;
+
+  &__wrapper {
+    position: relative;
+    z-index: 1;
+  }
 
   &__title {
     margin-bottom: $spacer * 3;
@@ -64,6 +71,28 @@
     text-decoration: none;
   }
 
+  &__overlay-top {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: rem(323);
+    height: rem(320);
+    background-image: url('/img/blurred/blurred-light-4-mobile.png');
+    background-position: top;
+    background-size: cover;
+  }
+
+  &__overlay-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: rem(375);
+    height: rem(377);
+    background-image: url('/img/blurred/blurred-light-5-mobile.png');
+    background-position: bottom;
+    background-size: cover;
+  }
+
   @include media-breakpoint-up(xl) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 7.5;
@@ -92,6 +121,16 @@
         width: 100%;
         min-height: rem(333);
       }
+    }
+
+    &__overlay-top {
+      background-image: url('/img/blurred/blurred-light-4.png');
+    }
+
+    &__overlay-bottom {
+      width: rem(637);
+      height: rem(376);
+      background-image: url('/img/blurred/blurred-light-5.png');
     }
   }
 }
