--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
@@ -30,7 +30,7 @@
 
   &__card {
     &-info {
-      background: linear-gradient($neutral-20, #0E1424);
+      background: linear-gradient($neutral-20, #0e1424);
       padding-top: $spacer * 1.5;
       padding-bottom: $spacer * 1.5;
       padding-left: $spacer * 1.5;
