--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small.scss
@@ -10,7 +10,7 @@
 
   &__content {
     position: relative;
-    background: linear-gradient($neutral-20, #0E1424);
+    background: linear-gradient($neutral-20, #0e1424);
     border-radius: $spacer * 0.5;
     overflow: hidden;
 
@@ -60,7 +60,7 @@
     }
 
     &__content {
-      background: linear-gradient(to left, $neutral-20, #0E1424);
+      background: linear-gradient(to left, $neutral-20, #0e1424);
 
       img {
         padding: 0;
