--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
@@ -5,14 +5,14 @@
         <h3 class="qdrant-vector-database-hero__title">{{ .Params.title }}</h3>
         <div class="qdrant-vector-database-hero__description">{{ .Params.description }}</div>
         <div class="qdrant-vector-database-hero__buttons">
-          <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
-          <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg">{{ .Params.contactUs.text }}</a>
+          <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">
+            {{ .Params.startFree.text }}
+          </a>
+          <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg">
+            {{ .Params.contactUs.text }}
+          </a>
         </div>
-        <img
-          class="qdrant-vector-database-hero__preview"
-          src="{{ .Params.image.src }}"
-          alt="{{ .Params.image.alt }}"
-        />
+        <img class="qdrant-vector-database-hero__preview" src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" />
         <img
           class="qdrant-vector-database-hero__preview-mobile"
           src="{{ .Params.image.srcMobile }}"
