--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -8,9 +8,8 @@
   </header>
 </main>
 
-{{ with (.Site.GetPage "qdrant-vector-database-use-cases") }} {{ partial "qdrant-vector-database-use-cases" . }}
-{{ end }} {{ with (.Site.GetPage "feature-overview") }} {{ partial "feature-overview" . }} {{ end }} {{ with
-(.Site.GetPage "get-started-small") }} {{partial "get-started-small" . }} {{ end }} {{ with
-(.Site.GetPage "additional-resources") }} {{partial "additional-resources" . }} {{ end }}  {{ with (.Site.GetPage
-"get-started") }} {{partial "get-started" . }} {{ end }} {{ with (.Site.GetPage "footer") }} {{ partial "footer" . }}
-{{ end }}
+{{ with (.Site.GetPage "qdrant-vector-database-use-cases") }} {{ partial "qdrant-vector-database-use-cases" . }} {{ end
+}} {{ with (.Site.GetPage "feature-overview") }} {{ partial "feature-overview" . }} {{ end }} {{ with (.Site.GetPage
+"get-started-small") }} {{partial "get-started-small" . }} {{ end }} {{ with (.Site.GetPage "additional-resources") }}
+{{partial "additional-resources" . }} {{ end }} {{ with (.Site.GetPage "get-started") }} {{partial "get-started" . }} {{
+end }} {{ with (.Site.GetPage "footer") }} {{ partial "footer" . }} {{ end }}
